Add various tracking events

--- a/client/testCards.html
+++ b/client/testCards.html
@@ -20,7 +20,7 @@
 			
 			var cardData = null;
 			
-			Utils.preloadModels(function()
+			Utils.preloadAssets(function()
 			{
 				$.getJSON('/decks/altspace.json')
 				.then(function(data)
