--- a/client/feedback.html
+++ b/client/feedback.html
@@ -11,18 +11,40 @@
 		<input type="button" value="Submit" onclick = "sendData()">
 	</form></div>
    <script>
+   var playerInfo = {};
+   	if(altspace.inClient){
+			altspace.getUser().then(function(userInfo)
+			{
+				if(userInfo && userInfo.userId && userInfo.displayName){
+					playerInfo.displayName = userInfo.displayName;
+				}
+				else
+				{
+					console.log("you have been logged out of Coherent.");
+					var message = document.createElement('h1');
+					message.innerHTML = 'You\'ve been logged out of Coherent. Log in to join.';
+					document.body.insertBefore(message, document.body.children[0]);
+				}
+			});
+	}
+	else {
+		playerInfo.id = ''+Math.floor(Math.random()*1000);
+		playerInfo.displayName = 'WebClient'+playerInfo.id;
+	}
+	console.log(playerInfo.displayName);
    	var xhr = new XMLHttpRequest();
-   	xhr.open("POST", "hah.nodriftreality.com/feedback", true);
+   	xhr.open("POST", "/feedback", true);
+   	xhr.setRequestHeader("Content-Type", "application/JSON")
 	
 	function sendData(){
 	var feedBack = {
 		"title" : document.getElementById("title").value,
 		"body" : document.getElementById("body").value,
-		// I may have to wrap this in an array?
-		"labels" : document.querySelector('input[name = "type"]:checked').value
+		"labels" : document.querySelector('input[name = "type"]:checked').value,
+		"username" : playerInfo.displayName
 	};
 	xhr.send(JSON.stringify(feedBack));
- console.log(feedBack);
+ console.log(JSON.stringify(feedBack));
 }
 </script>
     </head> <body alpha = 1>
