--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 		<script src='/static/util.js'></script>
 		<script src='/static/game.js'></script>
 		<script src='/static/confetti.js'></script>
+		<script src='/static/crown.js'></script>
 
 		<title>Holograms Against Humanity</title>
 	</head>
