--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,15 @@
 		<script src='/static/util.js'></script>
 		<script src='/static/game.js'></script>
 		<script src='/static/confetti.js'></script>
-
 		<title>Holograms Against Humanity</title>
 	</head>
 	<body>
+		<input type='image' src='/static/suggestion.png' style='width:50px; height:50px; float:left'
+			onclick='return toggleSuggestionForm()' />
+		<iframe width=500 height=300 style='display:none; margin: 0 auto;'
+			src='https://docs.google.com/forms/d/1UHU5_WUsz9hoDdkiyiouvl5u49NgNUSA_ZS6qyXOtJk/viewform'>
+			IFrame not supported.
+		</iframe>
 		<script src='/static/client.js'></script>
 	</body>
 </html>
