--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,15 @@
 		<script src='/static/game.js'></script>
 		<script src='/static/confetti.js'></script>
 		<title>Holograms Against Humanity</title>
+		<script>
+			// do google analytics tracking
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-78752535-1', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<input type='image' src='/static/suggestion.png' style='width:50px; height:50px; float:left'
