Add back in the toggle button for input testing

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,8 @@
 		</script>
 	</head>
 	<body>
+		<input type='image' src='/static/suggestion.png' style='width:50px; height:50px; float:left'
+			onclick='return toggleSuggestionForm()' />
 		<iframe width=500 height=300 style='display:none; margin: 0 auto;'
 			src='https://docs.google.com/forms/d/1UHU5_WUsz9hoDdkiyiouvl5u49NgNUSA_ZS6qyXOtJk/viewform'>
 			IFrame not supported.
