--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 		<script src='http://sdk.altvr.com/libs/altspace.js/0.14.1/altspace.min.js'></script>
 		<script src='/static/cursorShim.js'></script>
 		<script src='/static/behaviors.js'></script>
+		<script src='/static/Tween.js'></script>
 		<script src='/static/util.js'></script>
 		<script src='/static/game.js'></script>
 		<script src='/static/confetti.js'></script>
