--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 		<script src='/static/game.js'></script>
 		<script src='/static/confetti.js'></script>
 		<script src='/static/crown.js'></script>
+		<script src='/static/seat.js'></script>
 
 		<title>Holograms Against Humanity</title>
 		<script>
