fix mixed content error

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 		<script src='/socket.io/socket.io.js'></script>
 		<script src='/static/three.min.js'></script>
 		<script src='/static/ColladaLoader.js'></script>
-		<script src='http://sdk.altvr.com/libs/altspace.js/0.14.1/altspace.min.js'></script>
+		<script src='https://sdk.altvr.com/libs/altspace.js/0.14.1/altspace.min.js'></script>
 		<script src='/static/cursorShim.js'></script>
 		<script src='/static/behaviors.js'></script>
 		<script src='/static/Tween.js'></script>
