--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,15 @@
 <html>
 	<head>
 		<script src='/socket.io/socket.io.js'></script>
-		<script src='/static/three.min.js'></script>
-		<script src='/static/ColladaLoader.js'></script>
-		<script src='https://sdk.altvr.com/libs/altspace.js/0.14.1/altspace.min.js'></script>
-		<script src='/static/cursorShim.js'></script>
+
+		<script src='/static/lib/three.min.js'></script>
+		<script src='/static/lib/ColladaLoader.js'></script>
+		<script src='/static/lib/OBJLoader.js'></script>
+		<script src='/static/lib/MTLLoader.js'></script>
+		<script src='https://sdk.altvr.com/libs/altspace.js/0.14.1/altspace.js'></script>
+
 		<script src='/static/behaviors.js'></script>
-		<script src='/static/Tween.js'></script>
+		<script src='/static/lib/Tween.js'></script>
 		<script src='/static/util.js'></script>
 		<script src='/static/game.js'></script>
 		<script src='/static/confetti.js'></script>
