Fix/improve performance and text rendering for GearVR

--- a/client/testCards.html
+++ b/client/testCards.html
@@ -3,8 +3,13 @@
 	<head>
 		<meta name='viewport' content='width=device-width, initial-scale=1'/>
 		<script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
-		<script src='three.min.js'></script>
-		<script src='ColladaLoader.js'></script>
+		<script src='lib/three.min.js'></script>
+		<script src='lib/ColladaLoader.js'></script>
+		<script src='lib/MTLLoader.js'></script>
+		<script src='lib/OBJLoader.js'></script>
+		<script src='lib/Tween.js'></script>
+		<script src='https://sdk.altvr.com/libs/altspace.js/0.14.1/altspace.js'></script>
+		<script>var tableRadius = 300; var root = new THREE.Scene();</script>
 		<script src='util.js'></script>
 		<style>
 			.card { width: 256px; height: 360px; margin-right: 5px; display: inline-block; overflow: hidden; }
